objects/vlocity_ins__Promotion__c.object
<CustomObject>
    <description>A promotion is a definition of promotional pricing that can be made available to customers. Promotions are made available to customers for a period of time and usually define limited-time promotional pricing that may also require the customer to commit to certain subscriptions for a defined period.</description>
    <fields>
        <fullName>vlocity_ins__AppliesToAllItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To All Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BenefitTimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Time Plan</label>
        <referenceTo>vlocity_ins__TimePlan__c</referenceTo>
        <relationshipLabel>Promotions (Benefit Time Plan)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BenefitTimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Time Policy</label>
        <referenceTo>vlocity_ins__TimePolicy__c</referenceTo>
        <relationshipLabel>Promotions (Benefit Time Policy)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CannotBeCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this promotion is allowed to be combined with other promotions on customer subscriptions and purchases.</description>
        <label>Cannot Be Combined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DiscountType__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DurationTimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment Duration Time Plan</label>
        <referenceTo>vlocity_ins__TimePlan__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DurationTimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment Duration Time Policy</label>
        <referenceTo>vlocity_ins__TimePolicy__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DurationUnitOfMeasure__c</fullName>
        <description>Specifies the unit of measure for the duration of the discount.</description>
        <label>Discount Duration Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Duration__c</fullName>
        <description>Specifies how long the discount is available for.</description>
        <label>Discount Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableAutoAddProducts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Add Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableAutoApplyPromotion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this promotion should be automatically applied to qualifying customer orders without the customer specifically requesting it.</description>
        <label>Auto-Apply Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FollowOnPromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotion to take effect after the current promotion ends.</description>
        <label>Follow-on Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Promotion. Used to identify the Promotion across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Promotion identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLimitedQuantity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this promotion is limited in quantity and therefore only available while quantities last.</description>
        <label>Limited Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <description>The quantity of this promotion available or remaining.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RankOrder__c</fullName>
        <description>A ranking (e.g. 0-999) for displaying promotions in a particular order (within a level). In the example, 0 is the highest rank and 999 is lowest.</description>
        <label>Rank Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RedeemableCode__c</fullName>
        <externalId>true</externalId>
        <label>Redeemable Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceContinuation__c</fullName>
        <description>Indicates whether the user must manually opt-in to continue service after the promo ends, or manually opt-out of service.</description>
        <label>Service Continuation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Manual Opt-In</fullName>
                </value>
                <value>
                    <fullName>Manual Opt-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Discount</fullName>
        <active>true</active>
        <description>Discount record</description>
        <label>Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Promotion</fullName>
        <active>true</active>
        <description>Promotion record</description>
        <label>Promotion</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>